# alistar

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pom.xml
.github/workflows/: c-cpp.yml  maven-publish.yml
app/: CMakeLists.txt
app/src/: main.cpp
benchmark/: CMakeLists.txt
benchmark/inc/: benchmark.hpp
benchmark/test/: test_benchmark.cpp
list/: CMakeLists.txt
list/inc/: list.hpp
list/test/: test_list.cpp
node/: CMakeLists.txt
node/inc/: node.hpp
node/test/: test_node.cpp
test/: CMakeLists.txt
test/inc/: test_suite.hpp
test/test/: test_test_suite.cpp
